# inkscape-manager

./: Cargo.toml  README.md  config.yaml
dbus/: Cargo.toml  inkscape.xml  inkscape_actions.xml
dbus/src/: inkscape.rs
src/: clipboard.rs  config.rs  connection.rs  event_handler.rs  key.rs  keybind.rs  main.rs  style.rs  svg.rs
