[package]
name = "inkscape-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
styler = {git = "https://github.com/jjholt/styler", branch="dev"}
xcb = "1.2.2"
serde_yaml = "^0.9.25"
serde = { version = "^1.0.163", features = ["derive"] }
xkbcommon = { version = "0.5", features = ["x11"] }

xcb-wm = { version = "0.4.0", features = ["icccm", "ewmh"] }
