[package]
name = "inkscape-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
styler = {git = "https://github.com/jjholt/styler", branch="main"}
xcb = "1.2"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
xkbcommon = { version = "0.5", features = ["x11"] }

xcb-wm = { version = "0.4", features = ["icccm", "ewmh"] }
